force-app/main/default/objects/ProcesWorkitem__c/ProcesWorkitem__c.object-meta.xml
<CustomObject>
    <label>ProcesWorkitem</label>
    <nameField>
        <displayFormat>PW-{00000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>