force-app/main/default/objects/ProcesWorkitem__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <label>客户名称</label>
    <length>200</length>
    <type>Text</type>
</CustomField>