force-app/main/default/objects/ProcesWorkitem__c/fields/ApprovalIdeas__c.field-meta.xml
<CustomField>
    <fullName>ApprovalIdeas__c</fullName>
    <label>批准意见</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>