force-app/main/default/objects/ProcesWorkitem__c/fields/ApprovalName__c.field-meta.xml
<CustomField>
    <fullName>ApprovalName__c</fullName>
    <label>提交人名称</label>
    <length>200</length>
    <type>Text</type>
</CustomField>