force-app/main/default/objects/ProcesWorkitem__c/fields/CurrencyApprover__c.field-meta.xml
<CustomField>
    <fullName>CurrencyApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>提交人</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProcesWorkitem</relationshipName>
    <type>Lookup</type>
</CustomField>