force-app/main/default/objects/ProcesWorkitem__c/fields/CurrencyName__c.field-meta.xml
<CustomField>
    <fullName>CurrencyName__c</fullName>
    <label>当前审批人</label>
    <length>200</length>
    <type>Text</type>
</CustomField>