force-app/main/default/objects/ProcesWorkitem__c/fields/InstanceId__c.field-meta.xml
<CustomField>
    <fullName>InstanceId__c</fullName>
    <label>实体Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>