force-app/main/default/objects/ProcesWorkitem__c/fields/submitedDate__c.field-meta.xml
<CustomField>
    <fullName>submitedDate__c</fullName>
    <label>提交日期</label>
    <length>200</length>
    <type>Text</type>
</CustomField>