force-app/main/default/objects/ProcesWorkitem__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>类型</label>
    <length>200</length>
    <type>Text</type>
</CustomField>